samples/_failures_safe/1761043131_e338f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db760ff5.c: In function ‘main’:
./samples/SAFE/__tmp_db760ff5.c:170:14: error: expected ‘)’ at end of input
  170 |     if (fgets
      |        ~     ^
      |              )
./samples/SAFE/__tmp_db760ff5.c:170:5: error: expected declaration or statement at end of input
  170 |     if (fgets
      |     ^~
